<resources>
    <string name="app_name">Calculadora</string>
    <string name="miPrimerBoton">Incrementa</string>
    <string name="miSegundoBoton">Decrementa</string>
    <string name="display">0</string>
    <string name="displayEstado">0</string>


    <string name="boton0">0</string>
    <string name="boton1">1</string>
    <string name="boton2">2</string>
    <string name="boton3">3</string>
    <string name="boton4">4</string>
    <string name="boton5">5</string>
    <string name="boton6">6</string>
    <string name="boton7">7</string>
    <string name="boton8">8</string>
    <string name="boton9">9</string>

    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="por">*</string>
    <string name="entre">/</string>
    <string name="igual">=</string>
    <string name="limpia">C</string>
    <string name="punto">.</string>
    <string name="cambioSigno">+/-</string>
    <string name="fraccion">1/x</string>
    <string name="borrar">\u232b</string>
    <string name="matematicas">MATH\u2193</string>
    <string name="memoria">MEM\u2193</string>
    <string name="pi">\u03C0</string>
    <string name="radDeg">DEG</string>

    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="sqrt">√</string>
    <string name="potencia10">10\u02e3</string>
    <string name="elevar">xʸ</string>
    <string name="root">\u02e3√n</string>

    <string name="store">Store</string>
    <string name="recall">Recall</string>
    <string name="memMas">Mem+</string>
    <string name="memMenos">Mem-</string>
    <string name="mc">MC</string>
    <string name="mem">Mem: </string>
    <string name="displayMemoria">0</string>

    <string name="separator">|</string>



</resources>